Made user validation more flexible
Added duplicate check for username and emails
Added user disable functionality
Added cloudbuild file for CGP
Updated Swagger documentation
Deleted .vs folder
